<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hoangnv97.moviedemo.presentation.main.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_60dp"
            android:adjustViewBounds="true"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_movie"
            app:layout_constraintBottom_toTopOf="@+id/emailEdt"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginHorizontal="@dimen/_30dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center|start"
            android:hint="@string/email"
            android:maxLines="1"
            android:padding="@dimen/_10dp"
            android:text="@={viewModel.email}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginHorizontal="@dimen/_30dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10dp"
            android:paddingEnd="@dimen/_38dp"
            android:text="@={viewModel.password}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEdt" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/passwordShow"
            android:layout_width="@dimen/_20dp"
            android:layout_height="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cover_password"
            app:layout_constraintBottom_toBottomOf="@id/passwordEdt"
            app:layout_constraintEnd_toEndOf="@id/passwordEdt"
            app:layout_constraintTop_toTopOf="@id/passwordEdt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEdt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>