<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hoangnv97.moviedemo.presentation.main.castdetail.CastDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_5dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/userImageCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35dp"
                android:backgroundTint="@android:color/transparent"
                android:visibility="@{viewModel.castInfo.profilePath != null ? View.VISIBLE : View.INVISIBLE}"
                app:cardCornerRadius="87.5dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@android:color/white"
                app:strokeWidth="2dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/userImage"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:layout_margin="0dp"
                    android:scaleType="centerCrop"
                    app:bind_profile_path_no_fit="@{viewModel.castInfo.profilePath}"
                    tools:src="@tools:sample/avatars[0]" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@{viewModel.castInfo.name}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_36sp"
                tools:text="Ten" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@{viewModel.castInfo.knownForDepartment}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sp"
                tools:text="Acting" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/biography"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:alpha=".7"
                        android:text="@{viewModel.castInfo.biography}"
                        android:textColor="@android:color/white" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/photos"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/imageCastList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5dp"
                        android:text="@string/related_movies"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/relatedMovieList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:visibility="visible"
            app:is_gone="@{!viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>