<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hoangnv97.moviedemo.presentation.main.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideTop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/hlMovieImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:bind_backdrop_path_loading_highlighted_movie="@{viewModel.highlightedMovie}"
                app:bind_progress="@{hlMovieProgressBar}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/hlMovieProgressBar"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp"
                app:layout_constraintBottom_toBottomOf="@id/hlMovieImage"
                app:layout_constraintEnd_toEndOf="@id/hlMovieImage"
                app:layout_constraintStart_toStartOf="@id/hlMovieImage"
                app:layout_constraintTop_toTopOf="@id/hlMovieImage" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/shape_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{viewModel.highlightedMovie.title}"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideTop">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ratingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RatingBar
                    android:id="@+id/ratingBarMovie"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize=".5"
                    android:theme="@style/RatingBarTheme"
                    app:bind_rating_bar="@{viewModel.highlightedMovie}"
                    app:bind_rating_stars="@{5}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:rating="4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:text="@{@string/vote(viewModel.highlightedMovie.voteCount)}"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/ratingBarMovie"
                    app:layout_constraintStart_toEndOf="@id/ratingBarMovie"
                    app:layout_constraintTop_toTopOf="@id/ratingBarMovie"
                    tools:text="1000 vote" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genreFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:backgroundTint="@color/colorAccent"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingVertical="@dimen/_4dp"
                    android:text="@{viewModel.hlMovieGenreFirst}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ratingBarMovie" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genreSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8dp"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:backgroundTint="@color/colorAccent"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingVertical="@dimen/_4dp"
                    android:text="@{viewModel.hlMovieGenreSecond}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sp"
                    app:layout_constraintBottom_toBottomOf="@id/genreFirst"
                    app:layout_constraintStart_toEndOf="@id/genreFirst"
                    app:layout_constraintTop_toTopOf="@id/genreFirst" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingContainer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titlePopular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/showAllMoviePopular"
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_13sp"
                        app:layout_constraintBottom_toBottomOf="@id/titlePopular"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/titlePopular" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/moviePopularList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titlePopular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleMovies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/title_movies"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/moviePopularList" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/showAllMovies"
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_13sp"
                        app:layout_constraintBottom_toBottomOf="@id/titleMovies"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/titleMovies" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movieList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleMovies" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleComingSoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp"
                        android:text="@string/coming_soon"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/movieList" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/showAllComingSoon"
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_13sp"
                        app:layout_constraintBottom_toBottomOf="@id/titleComingSoon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/titleComingSoon" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/comingSoonList"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleComingSoon" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:visibility="visible"
            app:is_gone="@{!viewModel.loading}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="invisible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>